--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,21 @@
-<!doctype html>
-<html lang="en">
+---
+import "@fontsource/shippori-antique-b1";
+import "@fontsource/dm-mono";
+---
+
+<html lang="en" class="bg-black text-white font-dm-mono">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>onlychan.xyz</title>
+		<meta
+			name="description"
+			content="Hi! I am Chandram. I love coding and overengineering things."
+		/>
 	</head>
-	<body>
+	<body class="p-4 h-screen w-screen">
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
