--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -21,7 +21,7 @@ const publications: Publication[] = await response.json();
         <ul class="grid grid-cols-1 gap-8">
             {
                 publications.map((publication) => (
-                    <li class="bg-gray-800 p-6 rounded-lg hover:shadow-md hover:shadow-cyan-500/20 transition-all mb-8">
+                    <li class="">
                         <h2 class="font-black font-shippori-antique-b1 text-2xl text-cyan-500 mb-3">
                             {publication.title}
                         </h2>
