feat: added blogs

--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -11,7 +11,7 @@
         <a class="mr-4 transition hover:underline" href="/publications"
             >publications</a
         >
-        <!-- <a class="mr-4 transition hover:underline" href="/blogs">blogs</a> -->
+        <a class="mr-4 transition hover:underline" href="/blogs">blogs</a>
         <a class="mr-4 transition hover:underline" href="/resources"
             >resources</a
         >
