feat: enhance TopBar with active link highlighting

--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -1,23 +1,33 @@
+---
+const { pathname } = Astro.url;
+const isActive = (path: string) => {
+  if (path === '/') {
+    return pathname === path;
+  }
+  return pathname.startsWith(path);
+};
+---
+
 <div class="m-2 flex flex-col">
     <div class="flex flex-wrap">
         <a
             target="_blank"
-            class="mr-4 transition hover:underline"
+            class={`mr-4 transition hover:underline ${pathname.includes('resume') ? 'text-cyan-400' : ''}`}
             href="https://links.onlychan.xyz/resume">resume</a
         >
-        <a class="mr-4 transition hover:underline" href="/work">work</a>
-        <a class="mr-4 transition hover:underline" href="/projects">projects</a>
-        <a class="mr-4 transition hover:underline" href="/socials">socials</a>
-        <a class="mr-4 transition hover:underline" href="/publications"
+        <a class={`mr-4 transition hover:underline ${isActive('/work') ? 'text-cyan-400' : ''}`} href="/work">work</a>
+        <a class={`mr-4 transition hover:underline ${isActive('/projects') ? 'text-cyan-400' : ''}`} href="/projects">projects</a>
+        <a class={`mr-4 transition hover:underline ${isActive('/socials') ? 'text-cyan-400' : ''}`} href="/socials">socials</a>
+        <a class={`mr-4 transition hover:underline ${isActive('/publications') ? 'text-cyan-400' : ''}`} href="/publications"
             >publications</a
         >
-        <a class="mr-4 transition hover:underline" href="/blogs">blogs</a>
-        <a class="mr-4 transition hover:underline" href="/resources"
+        <a class={`mr-4 transition hover:underline ${isActive('/blogs') ? 'text-cyan-400' : ''}`} href="/blogs">blogs</a>
+        <a class={`mr-4 transition hover:underline ${isActive('/resources') ? 'text-cyan-400' : ''}`} href="/resources"
             >resources</a
         >
     </div>
     <h1 class="mt-4 font-doto text-4xl font-bold">
-        <a class="transition hover:scale-110" href="/">chandram</a>
+        <a class={`transition hover:scale-110 ${isActive('/') && pathname === '/' ? 'text-cyan-400' : ''}`} href="/">chandram</a>
     </h1>
     <div class="mt-16"><slot /></div>
 </div>
