--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,12 @@
 import "@fontsource/shippori-antique-b1";
 import "@fontsource/dm-mono";
 import TopBar from "../components/TopBar.astro";
+import PostHog from "../components/PostHog.astro";
 ---
 
 <html lang="en" class="bg-black text-white font-dm-mono">
 	<head>
+		<PostHog />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
