--- a/src/components/PostHog.astro
+++ b/src/components/PostHog.astro
@@ -56,7 +56,7 @@
             }),
             (e.__SV = 1));
     })(document, window.posthog || []);
-    posthog.init(import.meta.env.POSTHOG_API_KEY, {
+    posthog.init(import.meta.env.PUBLIC_POSTHOG_API_KEY, {
         api_host: "https://portan.onlychan.xyz/",
         ui_host: "https://us.posthog.com",
     });
